src/App.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap');
@import "tailwindcss";
@import "tw-animate-css";

@custom-variant dark (&:is(.dark *));

html {
    background-color: #000;
    line-height: 1;
}

html {
    background-color: #000;
    line-height: 1;
    scrollbar-gutter: stable;
}

html::-webkit-scrollbar {
    width: 4px;
    height: 4px;
    position: absolute;
}

html::-webkit-scrollbar-track {
    background: transparent;
}

html::-webkit-scrollbar-thumb {
    background: var(--tr-100);
    border-radius: 4px;
}

html::-webkit-scrollbar-corner {
    background: transparent;
}

/* Utility */

:root {
    --redo-easing: cubic-bezier(.2, 0, 0, 1);
    --radius: 0.625rem;
    --background: oklch(1 0 0);
    --foreground: oklch(0.141 0.005 285.823);
    --card: oklch(1 0 0);
    --card-foreground: oklch(0.141 0.005 285.823);
    --popover: oklch(1 0 0);
    --popover-foreground: oklch(0.141 0.005 285.823);
    --primary: oklch(0.21 0.006 285.885);
    --primary-foreground: oklch(0.985 0 0);
    --secondary: oklch(0.967 0.001 286.375);
    --secondary-foreground: oklch(0.21 0.006 285.885);
    --muted: oklch(0.967 0.001 286.375);
    --muted-foreground: oklch(0.552 0.016 285.938);
    --accent: oklch(0.967 0.001 286.375);
    --accent-foreground: oklch(0.21 0.006 285.885);
    --destructive: oklch(0.577 0.245 27.325);
    --border: oklch(0.92 0.004 286.32);
    --input: oklch(0.92 0.004 286.32);
    --ring: oklch(0.705 0.015 286.067);
    --chart-1: oklch(0.646 0.222 41.116);
    --chart-2: oklch(0.6 0.118 184.704);
    --chart-3: oklch(0.398 0.07 227.392);
    --chart-4: oklch(0.828 0.189 84.429);
    --chart-5: oklch(0.769 0.188 70.08);
    --sidebar: oklch(0.985 0 0);
    --sidebar-foreground: oklch(0.141 0.005 285.823);
    --sidebar-primary: oklch(0.21 0.006 285.885);
    --sidebar-primary-foreground: oklch(0.985 0 0);
    --sidebar-accent: oklch(0.967 0.001 286.375);
    --sidebar-accent-foreground: oklch(0.21 0.006 285.885);
    --sidebar-border: oklch(0.92 0.004 286.32);
    --sidebar-ring: oklch(0.705 0.015 286.067);

    --color-redo-50: hsl(270 9.1% 99.7%);
    --color-redo-100: hsl(240 5.3% 92.5%);
    --color-redo-200: hsl(252 6.5% 84.9%);
    --color-redo-300: hsl(247.5 6% 73.7%);
    --color-redo-400: hsl(250 6.3% 62.7%);
    --color-redo-500: hsl(251.2 6.7% 52.9%);
    --color-redo-600: hsl(253.3 8.3% 42.4%);
    --color-redo-700: hsl(256 9.3% 31.6%);
    --color-redo-800: hsl(250.9 10.1% 21.4%);
    --color-redo-900: hsl(248.6 10.8% 12.7%);
    --color-redo-950: hsl(252 13.5% 7.3%);

    --tr-950: oklch(0% 0 0 / 0.95);
    --tr-950: oklch(0% 0 0 / 0.95);
    --tr-900: oklch(0% 0 0 / 0.9);
    --tr-800: oklch(0% 0 0 / 0.8);
    --tr-700: oklch(0% 0 0 / 0.7);
    --tr-600: oklch(0% 0 0 / 0.6);
    --tr-500: oklch(0% 0 0 / 0.5);
    --tr-400: oklch(0% 0 0 / 0.4);
    --tr-300: oklch(0% 0 0 / 0.3);
    --tr-200: oklch(0% 0 0 / 0.2);
    --tr-100: oklch(0% 0 0 / 0.1);
    --tr-50: oklch(0% 0 0 / 0.05);
}

.dark {
    --background: oklch(0.141 0.005 285.823);
    --foreground: oklch(0.985 0 0);
    --card: oklch(0.21 0.006 285.885);
    --card-foreground: oklch(0.985 0 0);
    --popover: oklch(0.21 0.006 285.885);
    --popover-foreground: oklch(0.985 0 0);
    --primary: oklch(0.92 0.004 286.32);
    --primary-foreground: oklch(0.21 0.006 285.885);
    --secondary: oklch(0.274 0.006 286.033);
    --secondary-foreground: oklch(0.985 0 0);
    --muted: oklch(0.274 0.006 286.033);
    --muted-foreground: oklch(0.705 0.015 286.067);
    --accent: oklch(0.274 0.006 286.033);
    --accent-foreground: oklch(0.985 0 0);
    --destructive: oklch(0.704 0.191 22.216);
    --border: oklch(1 0 0 / 10%);
    --input: oklch(1 0 0 / 15%);
    --ring: oklch(0.552 0.016 285.938);
    --chart-1: oklch(0.488 0.243 264.376);
    --chart-2: oklch(0.696 0.17 162.48);
    --chart-3: oklch(0.769 0.188 70.08);
    --chart-4: oklch(0.627 0.265 303.9);
    --chart-5: oklch(0.645 0.246 16.439);
    --sidebar: oklch(0.21 0.006 285.885);
    --sidebar-foreground: oklch(0.985 0 0);
    --sidebar-primary: oklch(0.488 0.243 264.376);
    --sidebar-primary-foreground: oklch(0.985 0 0);
    --sidebar-accent: oklch(0.274 0.006 286.033);
    --sidebar-accent-foreground: oklch(0.985 0 0);
    --sidebar-border: oklch(1 0 0 / 10%);
    --sidebar-ring: oklch(0.552 0.016 285.938);

    --tr-950: oklch(100% 0.00011 271.152 / 0.95);
    --tr-900: oklch(100% 0.00011 271.152 / 0.9);
    --tr-800: oklch(100% 0.00011 271.152 / 0.8);
    --tr-700: oklch(100% 0.00011 271.152 / 0.7);
    --tr-600: oklch(100% 0.00011 271.152 / 0.6);
    --tr-500: oklch(100% 0.00011 271.152 / 0.5);
    --tr-400: oklch(100% 0.00011 271.152 / 0.4);
    --tr-300: oklch(100% 0.00011 271.152 / 0.3);
    --tr-200: oklch(100% 0.00011 271.152 / 0.2);
    --tr-100: oklch(100% 0.00011 271.152 / 0.1);
    --tr-50: oklch(100% 0.00011 271.152 / 0.05);
}
/* ... */

